# rustygal

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
examples/: meta_verify.rs
src/: api.rs  bitmap.rs  dprog.rs  fptr.rs  gene.rs  lib.rs  main.rs  meta_api.rs  metagenomic.rs  node.rs  python.rs  sequence.rs  translation.rs
