[package]
name = "rustygal"
version = "0.2.0"
edition = "2021"
authors = ["Sunju Kim <n.e.coli.1822@gmail.com>", "Doug Hyatt (original Prodigal C)"]
license = "GPL-3.0-or-later"
description = "Rustygal: Prokaryotic Dynamic Programming Genefinding Algorithm (Rust reimplementation of prodigal)"
readme = "README.md"
repository = "https://github.com/necoli1822/rustygal"
homepage = "https://github.com/necoli1822/rustygal"
keywords = ["bioinformatics", "gene-prediction", "prodigal", "genomics", "metagenomics"]
categories = ["science"]

[[bin]]
name = "rustygal"
path = "src/main.rs"

[lib]
name = "rustygal"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# For optional gzip support (input file decompression only)
flate2 = { version = "1.0", optional = true }
# For parallel processing
rayon = "1.10"
# For Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
gzip = ["flate2"]
python = ["pyo3"]

# Note: Using standard Rust library functions
# - Math: std::f64 methods (ln, exp, powf, sqrt)
# - Sorting: sort_unstable_by (deterministic comparison)
# - Formatting: format! macro
# Will verify compatibility via testing

[profile.release]
lto = "fat"
codegen-units = 1
